fix: add smothly scrollbar

--- a/src/layouts/Home/index.scss
+++ b/src/layouts/Home/index.scss
@@ -6,6 +6,12 @@
   pointer-events: none;
 }
 
+.scroll-content-wrapper {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .cover-container {
   margin-bottom: 170px;
   position: relative;
